# cpuid

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  COPYING  COPYING.asc  CPUID.dsw  CPUID.sln  GNUmakefile  Makefile  README  README.md  SConstruct  TODO  cache.c  cache.h  clock.c  clock.h  cpuid.c  cpuid.h  feature.c  feature.h  handlers.c  handlers.h  main.c  meson.build  platform.h  prefix.h  sanity.c  sanity.h  state.h  threads.c  threads.h  util.c  util.h  vendor.h  version.c  version.h
.github/: install-alpine.sh  install-archlinux.sh  install-fedora.sh  install-ubuntu.sh  install.sh  preinstall.sh  script.sh
.github/workflows/: build.yml
.travis/: install-fedora.sh  install-post.sh  install-ubuntu.sh  script.sh
dumps/cpu-world.com/: .gitignore
dumps/cpu-world.com/tools/: fetch-all.sh  fetch.sh  prune_duplicates.py  reprocess-all.sh  reprocess.sh  translate.py  upload-snapshot.sh
getopt/: getopt.h  getopt_long.c
msvc/: .gitignore  CPUID.dsp  CPUID.vcproj  CPUID.vcxproj  prefix.c  stdint.h
tools/: build.pl  license.pl
